로그인 완료

--- a/MRS/src/main/webapp/resources/css/style.css
+++ b/MRS/src/main/webapp/resources/css/style.css
@@ -13,3 +13,22 @@ footer {
 table {
 	border: 1px solid black;
 }
+
+.spotify-login-button {
+  display: inline-block;
+  background-color: #1DB954;
+  color: #FFFFFF;
+  padding: 10px 20px;
+  border-radius: 4px;
+  text-decoration: none;
+}
+
+.spotify-logo {
+  height: 30px;
+  width: auto;
+  margin-right: 10px;
+}
+
+.login-text {
+  font-weight: bold;
+}
