--- a/MRS/src/main/webapp/resources/css/style.css
+++ b/MRS/src/main/webapp/resources/css/style.css
@@ -50,6 +50,23 @@ img, a {
   color: black;
 }
 
+.side h1 {
+  width: 100%;
+  display: flex;
+  height: 20%;
+  margin: 0 50% 5% 0;
+  font-weight: bolder;
+  font-size: 40px;
+  text-decoration: none;
+  color: black;
+}
+
+.side h3 {
+	font-weight: bolder;
+  font-size: 40px;
+  margin-bottom: 70px;
+}
+
 .side .menu a:hover {
   color: rgb(191, 23, 23);
 }
@@ -155,13 +172,15 @@ section.main .video-right {
     display: flex;
     width: 1179px;
     margin: 100px auto 0;
-    background: yellow;
   }
 
   section.main .video-right .co-pl .comments {
-    background: #8f4da9;
-    width: 75%;
-  }
+    width: 70%;
+    border-top: 2px solid white;
+    border-bottom: 2px solid white;
+    margin-right: 5%;
+    padding: 20px 0;
+}
 
   section.main .video-right .co-pl .comments .people {
     margin: 10px 0;
@@ -169,7 +188,9 @@ section.main .video-right {
 
   
   section.main .video-right .co-pl .playList {
-    background: orange;
     width: 25%;
     text-align: center;
+    border-top: 2px solid white;
+    border-bottom: 2px solid white;
+    padding: 20px 0;
   }
