--- a/MRS/src/main/webapp/resources/css/style.css
+++ b/MRS/src/main/webapp/resources/css/style.css
@@ -41,13 +41,21 @@ img, a {
 
 .side .menu a {
   width: 100%;
-  display: flex;
   height: 20%;
-  margin: 0 50% 5% 0;
+  text-decoration: none;
   font-weight: bolder;
   font-size: 40px;
-  text-decoration: none;
   color: black;
+  display: block;
+}
+
+.spotify-login-button{
+  text-align:center;
+  margin-bottom: 120px;
+}
+
+.login-text {
+  font-weight: bold;
 }
 
 .side h1 {
@@ -195,21 +203,5 @@ section.main .video-right {
     padding: 20px 0;
   }
   
-.spotify-login-button {
-  display: inline-block;
-  background-color: #1DB954;
-  color: #FFFFFF;
-  padding: 10px 20px;
-  border-radius: 4px;
-  text-decoration: none;
-}
 
-.spotify-logo {
-  height: 30px;
-  width: auto;
-  margin-right: 10px;
-}
-
-.login-text {
-  font-weight: bold;
 }
