--- a/MRS/src/main/webapp/resources/css/style.css
+++ b/MRS/src/main/webapp/resources/css/style.css
@@ -215,7 +215,7 @@ section.main .main-right .choose-img.flextoggle img{
 }
 
 
-.flex-box{
+.flex{
 	display : flex;
 }
 #result-list{
@@ -231,13 +231,20 @@ section.main .main-right .choose-img.flextoggle img{
 .hidden{
 	display : none !important; 
 }
+#result-list .result-image{
+	width : 25%;
+}
+#result-list .result-title{
+	width : 50%;
+}
+#result-list .result-artists{
+	width : 25%;
+}
 
-#result-list tbody tr td{
-	height : 40px;
-	background-position : center;
-	background-size : 100%;
-	background-repeat : no-repeat;
-	vertical-align : middle;
+
+#result-list .result-image img{
+	width : 100%;
+	height : 100%;
 }
 
 .result-title,.result-artists {
