--- a/MRS/src/main/webapp/resources/css/style.css
+++ b/MRS/src/main/webapp/resources/css/style.css
@@ -175,30 +175,53 @@ section.main .video-right .detail-ng .detail-cover {
 
 section.main .video-right .detail-ng img {
 	width: 100%;
+	height: 100%;
 }
 
-
-section.main .video-right .co-pl {
-	margin: 100px auto 0;
+section.main .video-right .detail-ng .teamTitle {
+	color: white;
+	text-align: center;
+	height: 100px;
+	line-height: 100px;
+	font-size: 20px;
+	font-weight: 700;
 }
 
-/* 댓글페이지 댓글영역 */
+/* 댓글페이지 댓글작성영역 */
 
-.video-right .co-pl .video-comment {
-	
+.video-right .video-comment {
+	width: 80%;
+	margin: 0 auto;
+	display: flex;
 }
 
-.video-right .co-pl .video-comment .write-wrap {
-	
+.video-right .video-comment textarea{
+	width: 80%;
+	height: 40px;
+	resize: none;
+	color: white;
+	background: black;
+	border-top: none;
+	border-left: none;
+	border-right: none;
+	border-bottom: 1px solid white;
+	line-height: 33px;
 }
 
+.video-right .video-comment textarea:focus {
+	outline: none;
+}
 
+.video-right .video-comment .commentbtn {
+	width: 15%;
+	margin-left: 5%;
+	opacity: 0.7;
+	border-radius: 16px;
+}
 
-
-
-
-
-
+.video-right .video-comment .commentbtn:hover {
+	opacity: 1;
+}
 
 /* 메인페이지에 있는 list */
  
@@ -214,13 +237,14 @@ section.main .main-right .choose-img.flextoggle img {
 
 .flex-box {
 	display: flex;
+	
 }
 
 .flex-box #result-list {
 	color: white;
 	text-align: center;
 	width: 65%;
-	height: 800px;
+	height: 100%;
 	position: sticky;
 	top: 20px;
 	margin-right: 7%;
@@ -228,46 +252,51 @@ section.main .main-right .choose-img.flextoggle img {
 	border-bottom: 1px solid white;
 }
 
-.flex-box #result-list thead tr th{
-	padding: 20 0;
+.flex-box #result-list .list-body li,
+.flex-box #result-list .list-head {
+	display: flex;
+	margin: 20 0;
 }
+
+.flex-box #result-list .list-head {
+	font-size: 14px;
+}
+
+.flex-box #result-list .result-image {
+	width: 14%;
+
+}
+
+.flex-box #result-list .list-body .result-image {
+	box-sizing:border-box;
+	border: 1px solid white;
+}
+
+.flex-box #result-list .result-image img {
+	width: 100%;
+	height: 100%;
+}
+
+.flex-box #result-list .result-title,
+.flex-box #result-list .result-artists {
+	width: 43%;
+}
+
 
 
 .flex-box .hidden {
 	display: none !important;
 }
 
-.flex-box #result-list tbody tr .result-image {
-	width: 20%;
-}
-
-.flex-box #result-list tbody tr .result-title,
-.flex-box #result-list tbody tr .result-artists {
-	width: 40%;
-}
-
-.flex-box #result-list tbody tr td {
-	height: 40px;
-	background-position: center;
-	background-size: 100%;
-	background-repeat: no-repeat;
-	vertical-align: middle;
-	text-overflow: ellipsis;
-
-}
 
 .flex-box .result-title:hover {
 	color: rgb(191, 23, 23);
 }
 
-.flex-box .result-title, .result-artists {
-	cursor: pointer;
-}
-
 /* 댓글페이지에 있는 리스트 */
 
 section.main .video-right .playList {
-	width: 25%;
+	width: 35%;
 	text-align: center;
 	padding: 20px 0;
 }
@@ -275,47 +304,51 @@ section.main .video-right .playList {
 .playList #result-list {
 	color: white;
 	text-align: center;
-	width: 100%;
-	height: 800px;
+	width: 90%;
+	height: 100%;
 	position: sticky;
 	top: 20px;
-	margin-right: 7%;
 	border-top: 1px solid white;
 	border-bottom: 1px solid white;
 }
 
-.playList #result-list thead tr th{
-	padding: 20 0;
+.playList #result-list .list-body li,
+.playList #result-list .list-head {
+	display: flex;
+	margin: 26 0;
 }
+
+.playList #result-list .list-head {
+	font-size: 20px;
+}
+
+.playList #result-list .result-image {
+	width: 14%;
+
+}
+
+.playList #result-list .list-body .result-image {
+	box-sizing:border-box;
+	border: 1px solid white;
+}
+
+.playList #result-list .result-image img {
+	width: 100%;
+	height: 100%;
+}
+
+.playList #result-list .result-title,
+.playList #result-list .result-artists {
+	width: 40%;
+}
+
 
 
 .playList .hidden {
 	display: block !important;
 }
 
-.playList #result-list tbody tr .result-image {
-	width: 20%;
-}
-
-.playList #result-list tbody tr .result-title,
-.playList #result-list tbody tr .result-artists {
-	width: 40%;
-}
-
-.playList #result-list tbody tr td {
-	height: 40px;
-	background-position: center;
-	background-size: 100%;
-	background-repeat: no-repeat;
-	vertical-align: middle;
-	text-overflow: ellipsis;
-
-}
 
 .playList .result-title:hover {
 	color: rgb(191, 23, 23);
-}
-
-.playList .result-title, .result-artists {
-	cursor: pointer;
 }
