재생 컨트롤러

--- a/MRS/src/main/webapp/resources/css/style.css
+++ b/MRS/src/main/webapp/resources/css/style.css
@@ -250,3 +250,7 @@ section.main .main-right .choose-img.flextoggle img{
 .result-title,.result-artists {
 	cursor : pointer;
 }
+
+ul.play-lists p{
+	font-size : 2px;
+}
