--- a/MRS/src/main/webapp/resources/css/style.css
+++ b/MRS/src/main/webapp/resources/css/style.css
@@ -803,7 +803,9 @@ ul.playLists li {
 	background: black;
 	color: white;
 	border: 1px solid white;
-	padding: 1px, 3px;
+	padding: 5px;
+	font-size : 20px;
+	margin-left : 80px;
 }
 
 .main .manual button:hover {
